--- a/generator.html
+++ b/generator.html
@@ -11,7 +11,7 @@
     </head>
 
     <body ng-app="appTest">
-        <div ng-controller="appControler">
+        <div ng-controller="appController">
              <div class="btn-group" uib-dropdown is-open="status.isopen">
                   <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle ng-disabled="disabled">
                     Kategorie <span class="caret"></span>
