--- a/generator.html
+++ b/generator.html
@@ -25,7 +25,7 @@
                     Kategorie <span class="caret"></span>
                   </button>
                   <ul class="uib-dropdown-menu" role="menu" aria-labelledby="single-button">
-                    <li ng-repeat="symbol in symbols | unique: 'categorie'"><a href="#">{{ symbol.categorie }}</a></li>
+                    <li ng-repeat="categorie in categories"><a href="#">{{ categorie.name }}</a></li>
                   </ul>
             </div>
         </div>
@@ -42,10 +42,11 @@
             </div>
         </div>
         <br>
-        <canvas style="width: 300px; height: 300px">
+        <canvas style="width: 300px; height: 300px" id="myCanvas">
             
         </canvas>
 
+    <script type="text/javascript" src="./js/canvas.js"> </script>
     <!-- app-module-->
     <script src="./js/app.js"> </script>
     <!-- app-controller-->
