Wenn per Keyword Suche ein Symbol ausgewählt wird, wird dieses jetzt in das Canvas eingefügt.

--- a/generator.html
+++ b/generator.html
@@ -84,7 +84,7 @@
                         <br>
                         <button type="button" class="btn btn-default" id="buttonFreihandZeichnen">Freihand zeichnen</button>
                         <br>
-                        <button type="button" class="btn btn-default" id="buttonLoeschen">Loeschen</button>
+                        <button type="button" class="btn btn-default" id="buttonLoeschen">Löschen</button>
                         <br>
                         <button type="button" class="btn btn-default" id="buttonRectangle">Rechteck malen</button>
                     </div>
